<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="#dfeaf1">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName"
        android:id="@+id/button"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="@color/colorButtonNormal"
        android:textColor="#ffffff"
        android:onClick="onClickButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName02"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:background="@color/colorButtonNormal"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        android:onClick="onClickButton02" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName03"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:background="@color/colorButtonNormal"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        android:onClick="onClickButton03" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName04"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:background="@color/colorButtonNormal"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        android:onClick="onClickButton04" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName05"
        android:id="@+id/button5"
        android:background="@color/colorButtonNormal"
        android:layout_below="@+id/button4"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:textColor="#ffffff"
        android:onClick="onClickButton05" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonName06"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:background="@color/colorButtonCapstone"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        android:onClick="onClickButton06" />

</RelativeLayout>
